Enhance Quick Encounter Tool: Implement CR to XP conversion and effective CR calculation based on selected monsters. Update UI to reflect effective CR from selections and improve template for clarity in monster CR display.

--- a/templates/window-encounter.hbs
+++ b/templates/window-encounter.hbs
@@ -36,7 +36,7 @@
                 <span class="window-encounter-cr-box-label">HERO CR</span>
                 <span class="window-encounter-cr-box-value">{{heroCRDisplay}}</span>
             </div>
-            <div class="window-encounter-cr-box" title="Current monsters on canvas">
+            <div class="window-encounter-cr-box" title="{{#if monsterCRFromSelection}}Selected for deploy (effective CR){{else}}Current monsters on canvas{{/if}}">
                 <span class="window-encounter-cr-box-label">MONSTER CR</span>
                 <span class="window-encounter-cr-box-value">{{monsterCRDisplay}}</span>
             </div>
